exports[`no-skip-test > invalid(1): import test from \"node:test\";\ntest.skip(\"title\", () => {}); 1`] = `

  1 | import test from "node:test";
  2 | test.skip("title", () => {});

`;

exports[`no-skip-test > invalid(1): import test from \"node:test\";\ntest.skip(\"title\", () => {}); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test.skip("title", () => {});
    |      ^^^^ Do not skip tests.

Suggestion 1/1: Remove \`.skip\`.:
  1 | import test from "node:test";
  2 | test("title", () => {});

`;

exports[`no-skip-test > invalid(2): import {it} from \"node:test\";\nit.skip(\"title\", () => {}); 1`] = `

  1 | import {it} from "node:test";
  2 | it.skip("title", () => {});

`;

exports[`no-skip-test > invalid(2): import {it} from \"node:test\";\nit.skip(\"title\", () => {}); 2`] = `

Message:
  1 | import {it} from "node:test";
> 2 | it.skip("title", () => {});
    |    ^^^^ Do not skip tests.

Suggestion 1/1: Remove \`.skip\`.:
  1 | import {it} from "node:test";
  2 | it("title", () => {});

`;

exports[`no-skip-test > invalid(3): import {describe} from \"node:test\";\ndescribe.skip(\"title\", () => {}); 1`] = `

  1 | import {describe} from "node:test";
  2 | describe.skip("title", () => {});

`;

exports[`no-skip-test > invalid(3): import {describe} from \"node:test\";\ndescribe.skip(\"title\", () => {}); 2`] = `

Message:
  1 | import {describe} from "node:test";
> 2 | describe.skip("title", () => {});
    |          ^^^^ Do not skip tests.

Suggestion 1/1: Remove \`.skip\`.:
  1 | import {describe} from "node:test";
  2 | describe("title", () => {});

`;

exports[`no-skip-test > invalid(4): import {skip} from \"node:test\";\nskip(\"title\", () => {}); 1`] = `

  1 | import {skip} from "node:test";
  2 | skip("title", () => {});

`;

exports[`no-skip-test > invalid(4): import {skip} from \"node:test\";\nskip(\"title\", () => {}); 2`] = `

Message:
  1 | import {skip} from "node:test";
> 2 | skip("title", () => {});
    | ^^^^ Do not skip tests.

`;

exports[`no-skip-test > invalid(5): import {skip as omitted} from \"node:test\";\nomitted(\"title\", () => {}); 1`] = `

  1 | import {skip as omitted} from "node:test";
  2 | omitted("title", () => {});

`;

exports[`no-skip-test > invalid(5): import {skip as omitted} from \"node:test\";\nomitted(\"title\", () => {}); 2`] = `

Message:
  1 | import {skip as omitted} from "node:test";
> 2 | omitted("title", () => {});
    | ^^^^^^^ Do not skip tests.

`;

exports[`no-skip-test > invalid(6): import test from \"node:test\";\ntest(\"title\", {skip: true}, () => {}); 1`] = `

  1 | import test from "node:test";
  2 | test("title", {skip: true}, () => {});

`;

exports[`no-skip-test > invalid(6): import test from \"node:test\";\ntest(\"title\", {skip: true}, () => {}); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test("title", {skip: true}, () => {});
    |                ^^^^^^^^^^ Do not skip tests.

`;

exports[`no-skip-test > invalid(7): import test from \"node:test\";\ntest(\"title\", {skip: \"not ready\"}, () => {}); 1`] = `

  1 | import test from "node:test";
  2 | test("title", {skip: "not ready"}, () => {});

`;

exports[`no-skip-test > invalid(7): import test from \"node:test\";\ntest(\"title\", {skip: \"not ready\"}, () => {}); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test("title", {skip: "not ready"}, () => {});
    |                ^^^^^^^^^^^^^^^^^ Do not skip tests.

`;

exports[`no-skip-test > invalid(8): import * as nodeTest from \"node:test\";\nnodeTest.test.skip(\"title\", () => {}); 1`] = `

  1 | import * as nodeTest from "node:test";
  2 | nodeTest.test.skip("title", () => {});

`;

exports[`no-skip-test > invalid(8): import * as nodeTest from \"node:test\";\nnodeTest.test.skip(\"title\", () => {}); 2`] = `

Message:
  1 | import * as nodeTest from "node:test";
> 2 | nodeTest.test.skip("title", () => {});
    |               ^^^^ Do not skip tests.

Suggestion 1/1: Remove \`.skip\`.:
  1 | import * as nodeTest from "node:test";
  2 | nodeTest.test("title", () => {});

`;

exports[`no-skip-test > invalid(9): import * as nodeTest from \"node:test\";\nnodeTest.skip(\"title\", () => {}); 1`] = `

  1 | import * as nodeTest from "node:test";
  2 | nodeTest.skip("title", () => {});

`;

exports[`no-skip-test > invalid(9): import * as nodeTest from \"node:test\";\nnodeTest.skip(\"title\", () => {}); 2`] = `

Message:
  1 | import * as nodeTest from "node:test";
> 2 | nodeTest.skip("title", () => {});
    |          ^^^^ Do not skip tests.

`;
